1 June 2012: Wouter
	- Http redirect support, for plain http check, in case hotspot has
	  a proxy that starts giving the internet contents.
	- GUI for OSX for software updates.
	- fix osx execl for software install.
	- update tray icon for osx software install.
	- fix osx comma in multiple DNS servers.
	- fix update installer

31 May 2012: Wouter
	- Fix bug in processing tray icon results from daemon.
	- url can contain numerical IP address and port number, in http
	  implementation.

22 May 2012: Wouter
	- Fix windows upgrade to preserve config files and to preserve the
	  installed (or not-installed) startmenu links.
	- Fix to not mess up the config files on a reinstall on windows.

21 May 2012: Wouter
	- windows runs installer from userspace.
	- windows dnssectrigger depends on unbound for boot invocation,
	  this fixes an error where it cannot tell unbound what to do.
	- fix updater for double callback due to retry and double reply.
	- fix slash in downloaded file and executed file (windows).
	- linebuffer for dnssec-trigger-control stdout, for results printout.

18 May 2012: Wouter
	- improved printout of SSL_ERROR_SYSCALL errors.
	- do not print interface-unknown and conn-reset errors upon system
	  restart for windows, only printed on high verbosity.

2 April 2012: Wouter
	- Remove debug print from update code.
	- Add debug prints to update code.
	- Fix FIONBIO error on windows.

30 March 2012: Wouter
	- windows implementation for update dialog and selfupdate.
	- work on osx update dialog and selfupdate.
	- lint clean.

29 March 2012: Wouter
	- fix exit of panel and threads
	- fix read multiple persist actions in one SSL packet frame.
	- gtk gui to ask for install of new software.  No unix action exists.

26 March 2012: Wouter
	- lock unlock and delete at exit of panel is improved.

15 March 2012: Wouter
	- configure windows detects GetAdaptersAdresses (XP and later).
	- snapshot for test.